# church-hub

./: .gitignore  CLAUDE.md  README.md  TODO.md  unnamed.patch
.claude/: settings.local.json
.github/workflows/: build-release.yml  test.yml
app/: .gitignore  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/.husky/: precommit
app/apps/client/: .env.sample  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
app/apps/server/: .env.sample  .gitignore  drizzle.config.ts  package.json  pnpm-lock.yaml
app/data/: app.db  app.db-shm
app/scripts/: copy-keylines-to-resurse-crestine.ts  generate-bible-book-names.ts  run-bun.js  setup-libmpv.js
app/tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.ios.conf.json  tauri.worktree.conf.json.sample
app/tauri-plugins/tauri-plugin-screen-brightness/: .gitignore  Cargo.toml  build.rs
app/tauri-plugins/tauri-plugin-screen-brightness/ios/: Package.swift
app/tauri-plugins/tauri-plugin-screen-brightness/ios/Sources/: ScreenBrightnessPlugin.swift
app/tauri-plugins/tauri-plugin-screen-brightness/permissions/: default.toml
app/tauri-plugins/tauri-plugin-screen-brightness/permissions/autogenerated/: reference.md
app/tauri-plugins/tauri-plugin-screen-brightness/permissions/autogenerated/commands/: get_brightness.toml
app/tauri-plugins/tauri-plugin-screen-brightness/permissions/schemas/: schema.json
app/tauri-plugins/tauri-plugin-screen-brightness/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
app/tauri/capabilities/: default.json  mobile.json  remote.json
app/tauri/icons/: icon.icns
app/tauri/lib/: .gitkeep
app/tauri/resources/mpv/: .gitkeep
app/tauri/src/: commands.rs  crypto.rs  domain.rs  lib.rs  main.rs  server.rs  webview.rs
app/tauri/src/audio/: mod.rs  player.rs  websocket_client.rs
app/tauri/windows/: hooks.nsh
churchhub-backend/: .dev.vars.example  .gitignore  README.md  deploy.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
churchhub-backend/src/: index.ts  types.ts
churchhub-backend/src/routes/: feedback.ts  health.ts
churchhub-backend/src/utils/: crypto.ts
scripts/: convert-ppt-to-pptx.sh  find-db-in-history.sh  find-secrets-in-history.sh  normalize-song-filenames.sh  rename-pptx-with-song-title.sh  revert-pptx-names.sh
scripts/convert-midi-to-mp3/: convert.sh
scripts/old-youtube-automation/: Automatizare.lnk  main.py  monitor-projector.py  requirements.txt  whatsapp_message.txt  youtube_broadcast.py
scripts/old-youtube-automation/templates/: advanced.html  obs.html
upstash-search/: .gitignore  index.js  package-lock.json  package.json
youtube-oauth-worker/: .dev.vars.example  README.md  deploy.sh  package.json  worker-configuration.d.ts  wrangler.toml
youtube-oauth-worker/src/: index.ts  types.ts
youtube-oauth-worker/src/middleware/: security.ts
(+1067 files in other folders)
