[package]
name = "church-hub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "church_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-window-state = "2.0.2"
parking_lot = "0.12.5"
tokio = "1.48.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tauri-plugin-http = { version = "2.5.4", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
