[package]
name = "tauri-plugin-screen-brightness"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for controlling screen brightness on iOS"
authors = ["church-hub"]
license = "MIT"
links = "tauri-plugin-screen-brightness"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
